--- a/admin.html
+++ b/admin.html
@@ -44,8 +44,8 @@ button:hover { opacity:0.9; }
 </table>
 
 <script>
-const GET_URL = "https://script.google.com/macros/s/YOUR_GET_DEPLOY_URL/exec?action=getComplaints";
-const UPDATE_URL = "https://script.google.com/macros/s/YOUR_UPDATE_DEPLOY_URL/exec?action=update";
+const GET_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=getComplaints";
+const UPDATE_URL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=update";
 
 async function fetchComplaints() {
   const res = await fetch(GET_URL);
