--- a/admin.html
+++ b/admin.html
@@ -44,13 +44,30 @@ button:hover { opacity:0.9; }
 </table>
 
 <script>
-// Replace these URLs with your actual deployed Web App URLs
-const GET_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?page=getComplaints";
-const UPDATE_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
+// Replace XXXX with your deployed Web App ID
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
 
 async function fetchComplaints() {
-  const res = await fetch(GET_URL);
+  const res = await fetch(`${WEB_APP_URL}?page=getComplaints`);
   return await res.json();
+}
+
+async function updateComplaint(rowIndex, status, remarks) {
+  try {
+    const res = await fetch(WEB_APP_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ rowIndex, status, remarks })
+    });
+    const result = await res.json();
+    if(result.status==="success") {
+      alert("✅ Updated successfully");
+    } else {
+      alert("❌ " + result.message);
+    }
+  } catch(err) {
+    alert("❌ Update failed: " + err.message);
+  }
 }
 
 function renderTable(complaints) {
@@ -83,25 +100,12 @@ function renderTable(complaints) {
   });
 
   document.querySelectorAll(".saveBtn").forEach(btn => {
-    btn.onclick = async () => {
+    btn.onclick = () => {
       const tr = btn.closest("tr");
       const rowIndex = btn.dataset.row;
       const status = tr.querySelector(".status").value;
       const remarks = tr.querySelector(".remarks").value;
-
-      const payload = { rowIndex, status, remarks };
-      try {
-        const res = await fetch(UPDATE_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
-        });
-        const result = await res.json();
-        if(result.status==="success") alert("✅ Updated successfully");
-        else alert("❌ " + result.message);
-      } catch(err) {
-        alert("❌ Update failed: " + err.message);
-      }
+      updateComplaint(rowIndex, status, remarks);
     };
   });
 }
