--- a/admin.html
+++ b/admin.html
@@ -1,65 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Admin - Complaint List</title>
-<style>
-body { font-family: Arial; background:#f5f5f5; margin:0; padding:20px; }
-h2 { color:#2e7d32; }
-table { width:100%; border-collapse: collapse; margin-top:10px; }
-th, td { border:1px solid #ccc; padding:8px; text-align:left; }
-th { background:#2e7d32; color:white; }
-select, input[type=text] { padding:5px; width:100%; box-sizing:border-box; }
-button { padding:5px 10px; background:#2e7d32; color:white; border:none; cursor:pointer; }
-button:hover { opacity:0.9; }
-</style>
-</head>
-<body>
-
-<h2>Complaint List</h2>
-
-<label for="statusFilter">Filter by Status:</label>
-<select id="statusFilter">
-  <option value="ALL">ALL</option>
-  <option value="OPEN">OPEN</option>
-  <option value="CLOSE">CLOSE</option>
-</select>
-
-<table id="complaintTable">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Date</th>
-      <th>Complainant</th>
-      <th>Contact</th>
-      <th>Type</th>
-      <th>Message</th>
-      <th>Pic</th>
-      <th>Status</th>
-      <th>Remarks</th>
-      <th>Action</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
-
 <script>
-// Replace this with your Web App URL
 const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
 
-// GET complaints using your separate getComplaints.gs
+// Fetch complaints JSON
 async function fetchComplaints() {
   const res = await fetch(`${WEB_APP_URL}?page=getComplaints`);
-  return await res.json();
-}
-
-// POST update
-async function updateComplaint(rowIndex, status, remarks) {
-  const res = await fetch(WEB_APP_URL, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ rowIndex, status, remarks })
-  });
   return await res.json();
 }
 
@@ -81,33 +25,10 @@ function renderTable(complaints) {
       <td>${c.TYPE}</td>
       <td>${c.MESSAGE}</td>
       <td>${c.PICS ? `<a href="${c.PICS}" target="_blank">View</a>` : ""}</td>
-      <td>
-        <select class="status">
-          <option value="OPEN" ${c.STATUS==="OPEN"?"selected":""}>OPEN</option>
-          <option value="CLOSE" ${c.STATUS==="CLOSE"?"selected":""}>CLOSE</option>
-        </select>
-      </td>
-      <td><input type="text" class="remarks" value="${c.REMARKS || ""}"></td>
-      <td><button class="saveBtn" data-row="${c.rowIndex}">Save</button></td>
+      <td>${c.STATUS}</td>
+      <td>${c.REMARKS}</td>
     `;
     tbody.appendChild(tr);
-  });
-
-  document.querySelectorAll(".saveBtn").forEach(btn => {
-    btn.onclick = async () => {
-      const tr = btn.closest("tr");
-      const rowIndex = btn.dataset.row;
-      const status = tr.querySelector(".status").value;
-      const remarks = tr.querySelector(".remarks").value;
-
-      try {
-        const result = await updateComplaint(rowIndex, status, remarks);
-        if(result.status === "success") alert("✅ Updated successfully");
-        else alert("❌ " + result.message);
-      } catch(err) {
-        alert("❌ Update failed: " + err.message);
-      }
-    };
   });
 }
 
@@ -120,6 +41,3 @@ document.getElementById("statusFilter").addEventListener("change", async () => {
 // Initial load
 fetchComplaints().then(renderTable);
 </script>
-
-</body>
-</html>
