--- a/admin.html
+++ b/admin.html
@@ -1,38 +1,114 @@
-<script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Admin - Complaint List</title>
+<style>
+body { font-family: Arial; background:#f5f5f5; margin:0; padding:20px; }
+h2 { color:#2e7d32; }
+table { width:100%; border-collapse: collapse; margin-top:10px; }
+th, td { border:1px solid #ccc; padding:8px; text-align:left; }
+th { background:#2e7d32; color:white; }
+select, input[type=text] { padding:5px; width:100%; box-sizing:border-box; }
+button { padding:5px 10px; background:#2e7d32; color:white; border:none; cursor:pointer; }
+button:hover { opacity:0.9; }
+</style>
+</head>
+<body>
 
-// Fetch complaints JSON
+<h2>Complaint List</h2>
+
+<label for="statusFilter">Filter by Status:</label>
+<select id="statusFilter">
+  <option value="ALL">ALL</option>
+  <option value="OPEN">OPEN</option>
+  <option value="CLOSE">CLOSE</option>
+</select>
+
+<table id="complaintTable">
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>Date</th>
+      <th>Complainant</th>
+      <th>Contact</th>
+      <th>Type</th>
+      <th>Message</th>
+      <th>Pic</th>
+      <th>Status</th>
+      <th>Remarks</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody></tbody>
+</table>
+
+<script>
+const GET_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=getComplaints";
+const UPDATE_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=update";
+
 async function fetchComplaints() {
-  const res = await fetch(`${WEB_APP_URL}?page=getComplaints`);
-  return await res.json();
+  const res = await fetch(GET_URL);
+  const data = await res.json();
+  return data; // assume array of complaints with columns: DATE, COMPLAINANT, CONTACT, TYPE, MESSAGE, PICS, STATUS, REMARKS
 }
 
-// Render complaints table
 function renderTable(complaints) {
   const tbody = document.querySelector("#complaintTable tbody");
   tbody.innerHTML = "";
 
   const filter = document.getElementById("statusFilter").value;
-  const filtered = filter === "ALL" ? complaints : complaints.filter(c => c.STATUS === filter);
+  let filtered = complaints;
+  if (filter !== "ALL") filtered = complaints.filter(c => c.STATUS === filter);
 
   filtered.forEach((c, i) => {
     const tr = document.createElement("tr");
+
     tr.innerHTML = `
       <td>${i+1}</td>
-      <td>${new Date(c.DATE).toLocaleString()}</td>
+      <td>${c.DATE}</td>
       <td>${c.COMPLAINANT}</td>
       <td>${c.CONTACT}</td>
       <td>${c.TYPE}</td>
       <td>${c.MESSAGE}</td>
       <td>${c.PICS ? `<a href="${c.PICS}" target="_blank">View</a>` : ""}</td>
-      <td>${c.STATUS}</td>
-      <td>${c.REMARKS}</td>
+      <td>
+        <select class="status">
+          <option value="OPEN" ${c.STATUS==="OPEN"?"selected":""}>OPEN</option>
+          <option value="CLOSE" ${c.STATUS==="CLOSE"?"selected":""}>CLOSE</option>
+        </select>
+      </td>
+      <td><input type="text" class="remarks" value="${c.REMARKS || ""}"></td>
+      <td><button class="saveBtn" data-row="${c.rowIndex}">Save</button></td>
     `;
     tbody.appendChild(tr);
   });
+
+  document.querySelectorAll(".saveBtn").forEach(btn => {
+    btn.addEventListener("click", async () => {
+      const rowIndex = btn.dataset.row;
+      const tr = btn.closest("tr");
+      const status = tr.querySelector(".status").value;
+      const remarks = tr.querySelector(".remarks").value;
+
+      const payload = { rowIndex, status, remarks };
+
+      try {
+        const res = await fetch(UPDATE_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
+        });
+        const result = await res.json();
+        if(result.status === "success") alert("✅ Updated successfully");
+        else alert("❌ " + result.message);
+      } catch(err) {
+        alert("❌ Update failed: " + err.message);
+      }
+    });
+  });
 }
 
-// Filter change
 document.getElementById("statusFilter").addEventListener("change", async () => {
   const complaints = await fetchComplaints();
   renderTable(complaints);
@@ -41,3 +117,6 @@ document.getElementById("statusFilter").addEventListener("change", async () => {
 // Initial load
 fetchComplaints().then(renderTable);
 </script>
+
+</body>
+</html>
