--- a/admin.html
+++ b/admin.html
@@ -44,11 +44,24 @@ button:hover { opacity:0.9; }
 </table>
 
 <script>
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec";
+// Fetch complaints JSON
 async function fetchComplaints() {
-  const res = await fetch("getComplaints");
+  const res = await fetch(`${WEB_APP_URL}?page=getComplaints`);
   return await res.json();
 }
 
+// Update a complaint
+async function updateComplaint(rowIndex, status, remarks) {
+  const res = await fetch(WEB_APP_URL, {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ rowIndex, status, remarks })
+  });
+  return await res.json();
+}
+
+// Render complaints table
 function renderTable(complaints) {
   const tbody = document.querySelector("#complaintTable tbody");
   tbody.innerHTML = "";
@@ -85,14 +98,9 @@ function renderTable(complaints) {
       const status = tr.querySelector(".status").value;
       const remarks = tr.querySelector(".remarks").value;
 
-      const payload = { rowIndex, status, remarks };
       try {
-        const res = await fetch("updateComplaint", {
-          method: "POST",
-          body: JSON.stringify(payload)
-        });
-        const result = await res.json();
-        if(result.status==="success") alert("✅ Updated successfully");
+        const result = await updateComplaint(rowIndex, status, remarks);
+        if(result.status === "success") alert("✅ Updated successfully");
         else alert("❌ " + result.message);
       } catch(err) {
         alert("❌ Update failed: " + err.message);
@@ -101,6 +109,7 @@ function renderTable(complaints) {
   });
 }
 
+// Filter change
 document.getElementById("statusFilter").addEventListener("change", async () => {
   const complaints = await fetchComplaints();
   renderTable(complaints);
