--- a/ticketing.html
+++ b/ticketing.html
@@ -183,40 +183,31 @@
     A dedicated <strong>IT server room</strong> at the Sukkur Reservation Office is staffed by IT personnel from <strong>8:00 AM to midnight</strong>, providing technical support for mobile and website users, as well as assisting remote stations with troubleshooting and ticketing issues.</p>
   </div>
 </div>
-<!-- ================= BOTTOM PANEL ================= -->
-<div class="bottom-panel">
-  <div class="panel-container">
-
-    <!-- LEFT SIDE -->
-    <div class="panel-left">
-      <h4>Download Apps</h4>
-
-      <div class="app-links">
-        <a href="https://play.google.com/store/apps/details?id=com.easyway.ticket.app&pli=1" target="_blank">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
-        </a>
-
-        <a href="https://apps.apple.com/pk/app/rabta/id6446243993" target="_blank">
-          <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store">
-        </a>
-      </div>
-
-      <p style="margin-top:10px;">
-        Website for E-Ticketing:
-        <a href="https://www.pakrailways.gov.pk/home" target="_blank">
-          www.pakrailways.gov.pk
-        </a>
-      </p>
+<!-- ================= DOWNLOAD / INFO PANEL ================= -->
+<div class="download-panel">
+  <div class="panel-row">
+    <div class="apps">
+      <strong>Download Apps</strong><br>
+      <a href="https://play.google.com/store/apps/details?id=com.easyway.ticket.app&pli=1" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Google Play">
+      </a>
+      <a href="https://apps.apple.com/pk/app/rabta/id6446243993" target="_blank">
+        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store">
+      </a>
     </div>
 
-    <!-- RIGHT SIDE -->
-    <div class="panel-right">
-      <a href="faq.html">FAQs</a>
+    <div class="website">
+      <strong>Website for E-Ticketing</strong><br>
+      <a href="https://www.pakrailways.gov.pk/home" target="_blank">
+        www.pakrailways.gov.pk
+      </a>
     </div>
 
+    <div class="faqs">
+      <a href="faq.html"><strong>FAQs</strong></a>
+    </div>
   </div>
 </div>
-
 </body>
 </html>
 
