--- a/ticketing.html
+++ b/ticketing.html
@@ -96,60 +96,52 @@
       margin: 10px 0;
     }
   }
-  /* ================= BOTTOM PANEL ================= */
-.bottom-panel {
-  background: #0d1b4c;
-  color: white;
-  padding: 20px;
+/* ================= DOWNLOAD PANEL ================= */
+.download-panel {
+  background: #e8f5e9;
+  padding: 20px 10px;
   margin-top: 30px;
+  border-top: 3px solid #2e7d32;
 }
 
-.bottom-panel .panel-container {
-  max-width: 1000px;
+.panel-row {
+  max-width: 1100px;
   margin: auto;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  gap: 20px;
   flex-wrap: wrap;
 }
 
-.panel-left, .panel-right {
-  flex: 1 1 300px;
+.panel-row div {
+  flex: 1;
 }
 
-.panel-left h4 {
-  margin: 0 0 10px;
-}
-
-.app-links img {
+.apps img {
   height: 40px;
-  margin-right: 10px;
-  vertical-align: middle;
+  margin: 5px;
 }
 
-.panel-left a,
-.panel-right a {
-  color: #ffeb3b;
+.website a,
+.faqs a {
+  color: #2e7d32;
   text-decoration: none;
   font-weight: bold;
 }
 
-.panel-left a:hover,
-.panel-right a:hover {
+.website a:hover,
+.faqs a:hover {
   text-decoration: underline;
 }
 
-.panel-right {
-  text-align: right;
-}
-
+/* Mobile */
 @media (max-width: 768px) {
-  .panel-right {
-    text-align: left;
-    margin-top: 15px;
+  .panel-row {
+    flex-direction: column;
   }
 }
-
 </style>
 </head>
 <body>
