--- a/stations.html
+++ b/stations.html
@@ -73,6 +73,13 @@ li {
 
 <main style="padding:20px;">
 <h3>Stations Information</h3>
+<input
+  type="text"
+  id="searchBox"
+  placeholder="🔍 Search station or facility..."
+  style="width:100%; padding:10px; margin-bottom:12px; font-size:16px;"
+  onkeyup="filterTable()"
+/>
 
 <table id="stationsTable">
   <thead>
@@ -91,31 +98,55 @@ li {
 <script>
 const API_URL = "https://script.google.com/macros/s/AKfycbya7KRQupcY_anV146gjtN0EeH6hQakjh20emQsgJqY0seA8MRV0vqst3zyE4zL2t6b/exec?action=stations";
 
+let stationsData = []; // ✅ store original data
+
 // Convert facilities text into bullet list
 function formatFacilities(text) {
   if (!text) return "";
-
   const items = text.split(/,|\n/).map(i => i.trim()).filter(i => i);
-
   return `<ul>${items.map(i => `<li>${i}</li>`).join("")}</ul>`;
 }
 
+// Render table rows
+function renderTable(data) {
+  const tbody = document.querySelector("#stationsTable tbody");
+  tbody.innerHTML = "";
+
+  if (data.length === 0) {
+    tbody.innerHTML = `<tr><td colspan="5">No matching records found</td></tr>`;
+    return;
+  }
+
+  data.forEach(row => {
+    tbody.innerHTML += `
+      <tr>
+        <td>${row.sno}</td>
+        <td>${row.station}</td>
+        <td>${formatFacilities(row.facilities)}</td>
+        <td><a href="${row.pics}" target="_blank">🖼 View</a></td>
+        <td><a href="${row.map}" target="_blank">📍 Map</a></td>
+      </tr>`;
+  });
+}
+
+// Filter function
+function filterTable() {
+  const keyword = document.getElementById("searchBox").value.toLowerCase();
+
+  const filtered = stationsData.filter(row =>
+    row.station.toLowerCase().includes(keyword) ||
+    (row.facilities && row.facilities.toLowerCase().includes(keyword))
+  );
+
+  renderTable(filtered);
+}
+
+// Fetch data
 fetch(API_URL)
   .then(res => res.json())
   .then(data => {
-    const tbody = document.querySelector("#stationsTable tbody");
-    tbody.innerHTML = "";
-
-    data.forEach(row => {
-      tbody.innerHTML += `
-        <tr>
-          <td>${row.sno}</td>
-          <td>${row.station}</td>
-          <td>${formatFacilities(row.facilities)}</td>
-          <td><a href="${row.pics}" target="_blank">🖼 View</a></td>
-          <td><a href="${row.map}" target="_blank">📍 Map</a></td>
-        </tr>`;
-    });
+    stationsData = data;   // ✅ save original
+    renderTable(stationsData);
   })
   .catch(err => {
     console.error(err);
