--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@ main {
   <!-- RIGHT : SECOND IMAGE / LOGO -->
   <div class="ds-right">
     <img src="https://drive.google.com/thumbnail?id=1ilBOj7UVrqw40gYfGD9dDTkE2pPrJNms&sz=w150" alt="Division Logo">
+    
+  <img src="https://drive.google.com/thumbnail?id=1pL0fvHvNg0ZYiaUu5Lq3B_f1EiFNAAO6&sz=w150" alt="Additional Logo" style="margin-top: 15px;">
   </div>
 </main>
 
