--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ main {
     <img src="https://drive.google.com/thumbnail?id=1ilBOj7UVrqw40gYfGD9dDTkE2pPrJNms&sz=w150" alt="Division Logo">
     
   <img src="https://drive.google.com/thumbnail?id=1pL0fvHvNg0ZYiaUu5Lq3B_f1EiFNAAO6&sz=w150" alt="Additional Logo" style="margin-top: 15px;">
-    <img src="https://drive.google.com/thumbnail?id=1uJ0Q5pW7pieeg5kdOyvnJ6UOneFIFKi4=w150" alt="Additional Logo2" style="margin-top: 15px;">
+    <img src="https://drive.google.com/thumbnail?id=1uJ0Q5pW7pieeg5kdOyvnJ6UOneFIFKi4&sz=w150" alt="Additional Logo2" style="margin-top: 15px;">
   </div>
 </main>
 
