--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@ main {
       feedback is important to us and will be reviewed and addressed promptly by
       the concerned authorities.
     </p>
-    <p>
+    <p><b>
       Together, we aim to build a more efficient, transparent, and
-      passenger-friendly railway system.
+      passenger-friendly railway system.</b>
     </p>
   </div>
 
