--- a/stations.html
+++ b/stations.html
@@ -86,7 +86,7 @@ li {
     <tr>
       <th>SNO</th>
       <th>Station</th>
-      <th>Facilities</th>
+      <th>Main Facilities</th>
       <th>Pics</th>
       <th>Google Map</th>
     </tr>
