--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ main {
   <a href="stations.html">Stations</a>
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
-  <a href="complaint.html">Register Complaint</a>
+  <a href="complaint.html"><b>Register Complaint</a></b>
 </nav>
 
 <main>
