--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ main {
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html"><b>Register Complaint</a></b>
+   <a href="contactus.html">Contact Us</a>
 </nav>
 
 <main>
