--- a/contactus.html
+++ b/contactus.html
@@ -175,14 +175,15 @@ tfoot td {
     </thead>
     <tbody>
       <tr>
-        <td>Divisional Superintendent</td>
-        <td>12333</td>
+        <td>Divisional Superintendent Office</td>
+        <td>(071) 9310067</td>
         <td>dsukkur@gmail.com</td>
       </tr>
       <tr>
         <td>Suggestion / Complaint</td>
-        <td>3333</td>
-        <td></td>
+        <td>0314-0005834   </td>
+        <td><a href="https://wa.me/1234567890" target="_blank">
+    <i class="fa fa-whatsapp" style="font-size:24px;"></i> WhatsApp Now </a></td>
       </tr>
       <tr>
         <td>E-Ticketing Support</td>
