--- a/contactus.html
+++ b/contactus.html
@@ -172,7 +172,7 @@ tfoot td {
       <tr>
         <th>Name / Designation</th>
         <th>Phone</th>
-        <th>Email</th>
+        <th>Email/WhatsApp</th>
       </tr>
     </thead>
     <tbody>
