--- a/contactus.html
+++ b/contactus.html
@@ -185,7 +185,7 @@ tfoot td {
         <td>Suggestion / Complaint</td>
         <td>0314-0005834   </td>
         <td><a href="https://wa.me/03140005834" target="_blank">
-    <i class="fa fa-whatsapp" style="font-size:24px;"></i> </a></td>
+    <i class="fab fa-whatsapp" style="font-size:24px;"></i> </a></td>
       </tr>
       <tr>
         <td>E-Ticketing Support</td>
