--- a/contactus.html
+++ b/contactus.html
@@ -177,7 +177,7 @@ tfoot td {
     </thead>
     <tbody>
       <tr>
-        <td>Divisional Superintendent Office</td>
+        <td>Divisional Superintendent Office, Sukkur</td>
         <td>(071) 9310067</td>
         <td>dsukkur@gmail.com</td>
       </tr>
@@ -188,8 +188,8 @@ tfoot td {
     <i class="fab fa-whatsapp" style="font-size:24px;"></i>WhatsApp</a></td>
       </tr>
       <tr>
-        <td>E-Ticketing Support</td>
-        <td></td>
+        <td>E-Ticketing Support(IT/Server Room, Reservation Office Sukkur Station)</td>
+        <td>071-9310014</td>
         <td>sukkurap@gmail.com</td>
       </tr>
     </tbody>
