--- a/contactus.html
+++ b/contactus.html
@@ -170,7 +170,7 @@ tfoot td {
   <table>
     <thead>
       <tr>
-        <th>Name / Designation</th>
+        <th>Title</th>
         <th>Phone</th>
         <th>Email/WhatsApp</th>
       </tr>
