--- a/ticketing.html
+++ b/ticketing.html
@@ -154,6 +154,7 @@
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
+  <a href="contactus.html">Contact Us</a>
 </nav>
 
 <div class="container">
