--- a/stations.html
+++ b/stations.html
@@ -69,6 +69,7 @@ li {
   <a href="timing.html">Train Timing</a>
   <a href="ticketing.html">Ticketing</a>
   <a href="complaint.html">Register Complaint</a>
+  <a href="contactus.html">Contact Us</a>
 </nav>
 
 <main style="padding:20px;">
